--- a/social-links-profile/index.html
+++ b/social-links-profile/index.html
@@ -11,19 +11,26 @@
 </head>
 <body>
 
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
+  <main class="card">
+    <img src="./assets/images/avatar-jessica.jpeg" alt="profile picture" class="profile-picture" />
+    <h1 class="name">Jessica Randall</h1>
+    <p class="location">London, United Kingdom</p>
+    <p class="bio">Front-end developer and avid reader.</p>
+    <ul class="social-links">
+      <li><a href="https://github.com" target="_blank">Github</a></li>
+      <li><a href="https://www.frontendmentor.io" target="_blank">Frontend Mentor</a></li>
+      <li><a href="https://www.linkedin.com" target="_blank">LinkedIn</a></li>
+      <li><a href="https://twitter.com" target="_blank">Twitter</a></li>
+      <li><a href="https://www.instagram.com" target="_blank">Instagram</a></li>
+    </ul>
+  </main>
 
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Your Name Here</a>.
+    </div>
+  </footer>
 </body>
 </html>
