Add attribution links and css file link

--- a/social-links-profile/index.html
+++ b/social-links-profile/index.html
@@ -7,15 +7,18 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
   <title>Frontend Mentor | Social links profile</title>
+  <link rel="stylesheet" href="./styles.css">
 
 </head>
 <body>
 
   <main class="card">
-    <img src="./assets/images/avatar-jessica.jpeg" alt="profile picture" class="profile-picture" />
-    <h1 class="name">Jessica Randall</h1>
-    <p class="location">London, United Kingdom</p>
-    <p class="bio">Front-end developer and avid reader.</p>
+    <section class="profile">
+      <img src="./assets/images/avatar-jessica.jpeg" alt="profile picture" class="profile-picture" />
+      <h1 class="name">Jessica Randall</h1>
+      <p class="location">London, United Kingdom</p>
+      <p class="bio">"Front-end developer and avid reader."</p>
+    </section>
     <ul class="social-links">
       <li><a href="https://github.com" target="_blank">Github</a></li>
       <li><a href="https://www.frontendmentor.io" target="_blank">Frontend Mentor</a></li>
@@ -28,8 +31,8 @@
   
   <footer>
     <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Challenge by <a href="https://www.frontendmentor.io/challenges/social-links-profile-UG32l9m6dQ" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://www.frontendmentor.io/profile/rshakash">Akash Raj</a>.
     </div>
   </footer>
 </body>
