--- a/blog-preview-card/index.html
+++ b/blog-preview-card/index.html
@@ -8,27 +8,26 @@
   
   <title>Frontend Mentor | Blog preview card</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
 
-  Learning
-
-  Published 21 Dec 2023
-
-  HTML & CSS foundations
-
-  These languages are the backbone of every website, defining structure, content, and presentation.
-
-  Greg Hooper
+  <main class="card">
+    <div class="card__image">
+      <img src="./assets/images/illustration-article.svg" alt="card image">
+    </div>
+    <p class="tag">Learning</p>
+    <p class="date">Published 21 Dec 2023</p>
+    <h1 class="title">HTML & CSS foundations</h1>
+    <p class="description">These languages are the backbone of every website, defining structure, content, and presentation.</p>
+    <div class="author">
+      <img src="./assets/images/image-avatar.webp" alt="author image"> Greg Hooper
+    </div>
+  </main>
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <footer class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io/challenges/blog-preview-card-ckPaj01IcS" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="https://www.frontendmentor.io/profile/rshakash">Akash Raj</a>.
+  </footer>
 </body>
 </html>
